fix: fix footer padding on mobile

--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -3,6 +3,8 @@
 }
 
 .footer {
+  padding: initial;
+  padding-top: 36pt;
   position: absolute;
   bottom: 0;
   width: 100%;
